@@ -18,10 +18,9 @@
 package org.apache.solr.security;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.security.spec.InvalidKeySpecException;
 import org.apache.solr.common.util.StrUtils;
-import org.apache.solr.common.util.SuppressForbidden;
 import org.apache.solr.core.CloudConfig;
 import org.apache.solr.util.CryptoKeys;
 
@@ -42,7 +41,6 @@ public class SolrNodeKeyPair {
     return keyPair;
   }
 
-  @SuppressForbidden(reason = "java.net.URL ctors deprecated since Java 20")
   private static CryptoKeys.RSAKeyPair createKeyPair(CloudConfig config) {
     if (config == null) {
       return new CryptoKeys.RSAKeyPair();
@@ -57,7 +55,8 @@ public class SolrNodeKeyPair {
     }
 
     try {
-      return new CryptoKeys.RSAKeyPair(new URL(privateKey), new URL(publicKey));
+      return new CryptoKeys.RSAKeyPair(
+          URI.create(privateKey).toURL(), URI.create(publicKey).toURL());
     } catch (IOException | InvalidKeySpecException e) {
       throw new RuntimeException("Bad PublicKeyHandler configuration.", e);
     }
