@@ -21,7 +21,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.StringWriter;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import org.apache.lucene.tests.util.LuceneTestCase;
@@ -34,7 +34,6 @@ import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.SolrInputDocument;
-import org.apache.solr.common.util.SuppressForbidden;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -83,9 +82,8 @@ public class TestRemoteStreaming extends SolrJettyTestBase {
     assertTrue(content.contains("1234"));
   }
 
-  @SuppressForbidden(reason = "java.net.URL ctors deprecated since Java 20")
   private String attemptHttpGet(String getUrl) throws IOException {
-    Object obj = new URL(getUrl).getContent();
+    Object obj = URI.create(getUrl).toURL().getContent();
     if (obj instanceof InputStream) {
       try (InputStream inputStream = (InputStream) obj) {
         StringWriter strWriter = new StringWriter();
