@@ -35,7 +35,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import org.apache.solr.common.SolrInputDocument;
-import org.apache.solr.common.util.SuppressForbidden;
 import org.apache.solr.schema.IndexSchema;
 import org.junit.BeforeClass;
 
@@ -306,9 +305,8 @@ public class ParsingFieldUpdateProcessorsTest extends UpdateProcessorTestBase {
         "//int[@name='int2_i'][.='" + value + "']");
   }
 
-  @SuppressForbidden(reason = "Locale(String, String) deprecated since Java 20")
   public void testParseIntNonRootLocale() throws Exception {
-    final DecimalFormatSymbols ru_RU = DecimalFormatSymbols.getInstance(new Locale("ru", "RU"));
+    final DecimalFormatSymbols ru_RU = DecimalFormatSymbols.getInstance(Locale.of("ru", "RU"));
     final char groupChar = ru_RU.getGroupingSeparator();
 
     int value = 1089883491;
@@ -422,9 +420,8 @@ public class ParsingFieldUpdateProcessorsTest extends UpdateProcessorTestBase {
         "//long[@name='long2_l'][.='" + value + "']");
   }
 
-  @SuppressForbidden(reason = "Locale(String,String) deprecated since Java 20")
   public void testParseLongNonRootLocale() throws Exception {
-    final DecimalFormatSymbols ru_RU = DecimalFormatSymbols.getInstance(new Locale("ru", "RU"));
+    final DecimalFormatSymbols ru_RU = DecimalFormatSymbols.getInstance(Locale.of("ru", "RU"));
     final char groupChar = ru_RU.getGroupingSeparator();
 
     long value = 1089883491L;
@@ -520,9 +517,8 @@ public class ParsingFieldUpdateProcessorsTest extends UpdateProcessorTestBase {
         "//float[@name='float2_f'][.='" + value + "']");
   }
 
-  @SuppressForbidden(reason = "Locale(String,String) deprecated since Java 20")
   public void testParseFloatNonRootLocale() throws Exception {
-    final DecimalFormatSymbols fr_FR = DecimalFormatSymbols.getInstance(new Locale("fr", "FR"));
+    final DecimalFormatSymbols fr_FR = DecimalFormatSymbols.getInstance(Locale.of("fr", "FR"));
     final char groupChar = fr_FR.getGroupingSeparator();
     final char decimalChar = fr_FR.getDecimalSeparator();
 
@@ -639,9 +635,8 @@ public class ParsingFieldUpdateProcessorsTest extends UpdateProcessorTestBase {
         "//double[@name='double2_d'][.='" + value + "']");
   }
 
-  @SuppressForbidden(reason = "Locale(String) deprecated since Java 20")
   public void testParseDoubleNonRootLocale() throws Exception {
-    final DecimalFormatSymbols fr_FR = DecimalFormatSymbols.getInstance(new Locale("fr", "FR"));
+    final DecimalFormatSymbols fr_FR = DecimalFormatSymbols.getInstance(Locale.of("fr", "FR"));
     final char groupChar = fr_FR.getGroupingSeparator();
     final char decimalChar = fr_FR.getDecimalSeparator();
 
