@@ -23,7 +23,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.util.zip.GZIPInputStream;
@@ -92,7 +92,6 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     }
   }
 
-  @SuppressForbidden(reason = "java.net.URL ctors deprecated since Java 20")
   public void testURLStream() throws IOException {
     File file = new File(createTempDir().toFile(), "README");
 
@@ -103,7 +102,7 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     }
 
     ContentStreamBase stream =
-        new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
+        new ContentStreamBase.URLStream(URI.create(file.toURI().toASCIIString()).toURL());
 
     try (InputStream s = stream.getStream();
         FileInputStream fis = new FileInputStream(file);
@@ -124,7 +123,6 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     }
   }
 
-  @SuppressForbidden(reason = "java.net.URL ctors deprecated since Java 20")
   public void testURLStreamGZIP() throws IOException {
     File file = new File(createTempDir().toFile(), "README.gz");
 
@@ -136,7 +134,7 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     }
 
     ContentStreamBase stream =
-        new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
+        new ContentStreamBase.URLStream(URI.create(file.toURI().toASCIIString()).toURL());
     try (InputStream s = stream.getStream();
         FileInputStream fis = new FileInputStream(file);
         GZIPInputStream zis = new GZIPInputStream(fis);
@@ -152,7 +150,6 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     }
   }
 
-  @SuppressForbidden(reason = "java.net.URL ctors deprecated since Java 20")
   public void testURLStreamCSVGZIPExtention() throws IOException {
     File file = new File(createTempDir().toFile(), "README.CSV.gz");
 
@@ -164,7 +161,7 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     }
 
     ContentStreamBase stream =
-        new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
+        new ContentStreamBase.URLStream(URI.create(file.toURI().toASCIIString()).toURL());
     try (InputStream s = stream.getStream();
         FileInputStream fis = new FileInputStream(file);
         GZIPInputStream zis = new GZIPInputStream(fis);
@@ -180,7 +177,6 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     }
   }
 
-  @SuppressForbidden(reason = "java.net.URL ctors deprecated since Java 20")
   public void testURLStreamJSONGZIPExtention() throws IOException {
     File file = new File(createTempDir().toFile(), "README.json.gzip");
 
@@ -192,7 +188,7 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     }
 
     ContentStreamBase stream =
-        new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
+        new ContentStreamBase.URLStream(URI.create(file.toURI().toASCIIString()).toURL());
     try (InputStream s = stream.getStream();
         FileInputStream fis = new FileInputStream(file);
         GZIPInputStream zis = new GZIPInputStream(fis);
