@@ -18,15 +18,14 @@ package org.apache.solr.handler;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import org.apache.solr.common.util.SuppressForbidden;
 import org.junit.Assert;
 
 public class TestRestoreCoreUtil {
-  @SuppressForbidden(reason = "java.net.URL ctors deprecated since Java 20")
   public static boolean fetchRestoreStatus(String baseUrl, String coreName) throws IOException {
     String leaderUrl =
         baseUrl
@@ -37,7 +36,7 @@ public class TestRestoreCoreUtil {
             + ReplicationHandler.CMD_RESTORE_STATUS;
     final Pattern pException = Pattern.compile("<str name=\"exception\">(.*?)</str>");
 
-    URL url = new URL(leaderUrl);
+    URL url = URI.create(leaderUrl).toURL();
     try (InputStream stream = url.openStream()) {
       String response = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
       Matcher matcher = pException.matcher(response);
